--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,12 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation(group: 'org.jsoup', name: 'jsoup', version: '1.13.1')
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+}
+
+test {
+    useJUnitPlatform()
 }
