--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,45 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath('com.novoda:bintray-release:0.9.2')
+    }
+}
+
 plugins {
     id 'java'
 }
 
-group 'OpenGraph Parser'
-version '1.0-SNAPSHOT'
+apply plugin: 'com.novoda.bintray-release'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
+group 'com.github.siyoon210'
+version '1.0.0'
+
 dependencies {
+    runtime (group: 'com.novoda', name: 'bintray-release', version: '0.9.2')
     implementation(group: 'org.jsoup', name: 'jsoup', version: '1.13.1')
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.5.10'
+    testImplementation (group: 'org.assertj', name: 'assertj-core', version: '3.6.1')
 }
 
 test {
     useJUnitPlatform()
+}
+
+publish {
+    userOrg = 'siyoon210'
+    repoName = 'util'
+    groupId = 'com.github.siyoon210'
+    artifactId = 'ogparser4j'
+    publishVersion = '1.0.0'
+    desc = 'OpenGraph parser for Java'
+    website = 'https://github.com/siyoon210/ogparser4j'
 }
